--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "test"
   },
   "scripts": {
-    "build":"echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --config webpack.config.js"
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
